management/deploy/mysql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: mgmt-mysql
  labels:
    app: mgmt-app
spec:
  ports:
    - port: 3306
  selector:
    app: mgmt-app
    tier: mysql
  clusterIP: None
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mgmt-mysql
  labels:
    app: mgmt-app
spec:
  selector:
    matchLabels:
      app: mgmt-app
      tier: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mgmt-app
        tier: mysql
    spec:
      containers:
        - image: mysql:5.6
          name: mgmt-mysql
          args: ["--character-set-server=utf8", "--collation-server=utf8_unicode_ci"]
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mgmt-mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mgmt-mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mgmt-mysql-pv-claim
