management/deploy/istio-virturalservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: library-gateway
  namespace: library
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mgmt-vsvc
  namespace: library
spec:
  hosts:
    - '*'
  gateways:
    - library-gateway
  http:
    - match:
        - uri:
            prefix: /api/management
        - uri:
            prefix: /api/manageraccount         
      route:
        - destination:
            host: management
            port:
              number: 8080
